# kardbattle

./: CMakeLists.txt  CMakeLists.txt.user.4.9-pre1  Card.qml  LICENSE  README.md  board.cpp  board.h  card.cpp  card.h  deck.cpp  deck.h  display.cpp  display.h  kardbattle.cpp  kardbattle.pro  main.cpp  main.qml  player.cpp  player.h  qml.qrc  rules.h
